# handbook

./: .buildinfo  .gitignore  00_welcome.html  01_neuroimaging.html  99_glossary.html  Makefile  README.md  genindex.html  glossary.html  intro.html  markdown-notebooks.html  neuroimaging.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: build.yml  deploy.yaml  deploy.yml  spellcheck.yaml  spellcheck.yml
_sources/: 01_neuroimaging.ipynb  markdown-notebooks.ipynb  neuroimaging.ipynb  neuroimaging.md
book/: _config.yml
docs/: _config.yml  _toc.yml  glossary.md  neuroimaging.md
