[tool.poetry]
name = "aramislab-handbook"
version = "0.0.1"
description = "The Aramis Lab Handbook"
authors = ["The Aramis Lab"]
license = "CC-BY-SA-4.0"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
jupyter-book = "^0.13.0"
nibabel = "^4"
nilearn = ">=0.9.1"
matplotlib = "^3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
